--- a/demo/drag-move-demo.html
+++ b/demo/drag-move-demo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>drag-move-demo</title>
     <script src="vue.min.js" type="text/javascript"></script>
-    <script src="../index.js" type="text/javascript"></script>
+    <script src="../dist/ccDirective.js" type="text/javascript"></script>
     <style>
         .app {
             margin: auto;
@@ -44,7 +44,6 @@
     </style>
 </head>
 <body>
-<div style="height:1000px"></div>
     <div class="app">
         <div>竖向拖拽位置交换</div>
         <div v-drag-move="dragDataV" class="flexv">
